--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "vercel": "^28.7.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
